# rust-robotUI

./: Cargo.toml  README.md  out.txt
.cargo/: config.toml
src/: custom_robot.rs  custom_world_generator.rs  main.rs  resources.rs  systems.rs
src/UI/: components.rs  mod.rs  styles.rs
src/UI/systems/: interactions.rs  layout.rs  mod.rs
src/camera/: components.rs  mod.rs  systems.rs
src/main_menu/: components.rs  mod.rs  styles.rs
src/main_menu/systems/: interactions.rs  layout.rs
src/player/: components.rs  mod.rs  resources.rs  systems.rs
src/world/: components.rs  generator.rs  mod.rs  resources.rs  systems.rs
worlds/: save.json
