[package]
name = "UI_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3


[dependencies]
robotics_lib = { version = "0.1.19", registry = "kellnr" }
bevy = "0.11.3"
bevy_ecs_tilemap = "0.11.1"
